--- a/BlazorApp1/appsettings.json
+++ b/BlazorApp1/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     //"BlazorApp2Context": "Server=(localdb)\\mssqllocaldb;Database=BlazorApp2Context-7803afb6-81ec-41cf-8d23-079cf7826ef1;Trusted_Connection=True;MultipleActiveResultSets=true"
-    "JobTrackerDevContext": "Data Source=localhost;Initial Catalog=dev;Integrated Security=True;Trust Server Certificate=True"
+    //"JobTrackerDevContext": "Data Source=localhost;Initial Catalog=dev;Integrated Security=True;Trust Server Certificate=True"
   }
 }
